--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,9 @@ dependencies {
     implementation "com.google.android.material:material:$material_version"
 
 
-    implementation "io.insert-koin:koin-core:$koin_version"
+    // koin
+    implementation "io.insert-koin:koin-android:$koin_version"
+
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
