--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
         okhttp_version = '4.12.0'
         picasso_version = '2.71828'
         circleimageview_version = '3.1.0'
+        lottie_version = '3.4.0'
 
         junit_version = '4.12'
         mockk_version = '1.13.9'
